# mano

./: .clang-format  CMakeLists.txt  README.md  build-release.sh  build.sh
docs/: index.html  mano.js  mano.wasm
imgui-backend/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
include/: application.hpp  emulator.hpp
include/emulator/: assembler.hpp  bus.hpp  cpu.hpp  emulator.hpp  instructions.hpp
include/ui/: scheme.hpp
src/: application.cpp
src/emulator/: assembler.cpp  bus.cpp  cpu.cpp  emulator.cpp
src/ui/: scheme.cpp
